- Squashed remaining bugs for uploading files   - Fixed _reloadTracker issues   - Successfully uploads many files and changes the background red     while uploading. I can change this to a loading icon now.   - Added basic status message that counts the number of files in the     directory.

--- a/builtins/file-browser/templates/file-browser.css
+++ b/builtins/file-browser/templates/file-browser.css
@@ -119,11 +119,8 @@
     width: auto;
 }
 
-.fb-files .fb-file .td.progressbar .progress {
-    width: 80px;
-    height: 16px;
-    margin-left: 5px;
-    margin-bottom: 0px;
+.fb-files .fb-file .uploading {
+    background-color: red;
 }
 
 .fb-pane.fb-pane-main .fb-files .fb-file:hover {
